# synchronization

./: .gitignore  README.md  setup_aliases.sh
src/api/: CMakeLists.txt  package.xml
src/api/msg/: DetectResult.msg  DetectResults.msg  PoseResult.msg  PoseResults.msg  Stm32.msg
src/pos/: CMakeLists.txt  package.xml
src/pos/config/: cam_param.yml
src/pos/include/pos/: Converter.hpp  PosSolver.hpp  pos_node.hpp
src/pos/launch/: pos.launch.py  vi_pos.launch.py
src/pos/src/: Converter.cpp  PosSolver.cpp  pos_node.cpp
src/sync/: CMakeLists.txt  package.xml
src/sync/config/: sync.yml
src/sync/include/sync/: FreqDomainAlgo.hpp  TimeDomainAlgo.hpp  coreAlgoBase.hpp  interpolator.hpp  syncManager.hpp  sync_node.hpp
src/sync/launch/: sync.launch.py  vi_sync.launch.py
src/sync/src/: FreqDomainAlgo.cpp  TimeDomainAlgo.cpp  interpolator.cpp  syncManager.cpp  sync_node.cpp
src/tree/: CMakeLists.txt  package.xml
src/tree/config/: offset.yml
src/tree/include/tree/: tree_node.hpp
src/tree/launch/: tree.launch.py
src/tree/src/: tree_node.cpp
src/unit/: CMakeLists.txt  package.xml
src/unit/include/unit/: types.hpp  unit.hpp
src/unit/src/: types.cpp
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: utils.hpp
src/utils/src/: utils.cpp
